--- a/index1.1.html
+++ b/index1.1.html
@@ -34,5 +34,6 @@
         <div>
             <a href="https://facebook.com/hannat.salami.9/">My Profile</a>
         </div>
+        <div> <a href="index2.html">Next Page</a></div>
     </body>
 </html>
