--- a/index2.html
+++ b/index2.html
@@ -20,5 +20,7 @@
         <div class="center-text">
             <p id="copyright">Copyright Little Lemon</p>
         </div>
+         <div><a href="index1.1.html">Back</a></div>
+        <div><a href="index3.html">Next</a></div>
     </body>
 </html>
