Update and rename index1.1.html to index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 <title>Salami Hannat</title>
-<link rel="stylesheet" href="style1.1.css">
+<link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div>
@@ -31,6 +31,7 @@
                 <li>IT</li>
             </ol>
         </div>
+        <div> <a href="https://facebook.com/hannat.salami.9/">My Profile</a></div> 
         <br>
         <br>
         <div> <a href="index2.html">Next Page</a></div>
